<resources>
    <string name="app_name">E-RENT</string>
    <string name="splash">splash</string>
    <string name="e_rent">E-RENT</string>
    <string name="payment_made_easier">Payment Made Easier</string>
    <string name="tenant_registration">Tenant Registration</string>
    <string name="landlord_registration">LandLord Registration</string>
    <string name="icon">icon</string>
    <string name="welcome_back">Welcome Back!!!</string>
    <string name="e_rent_landlord">E-RENT LandLord</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do Not Have An Account?</string>
    <string name="register">Register</string>
    <string name="e_rent_tenant">E-RENT Tenant</string>
    <string name="hello_e_rent">Hello E-RENT</string>
    <string name="landlord">LandLord</string>
    <string name="register_with_us">Register With Us</string>
    <string name="landlord_name">LandLord Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="house_type">House Type</string>
    <string name="number_of_houses">Number Of Houses</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="tenant">Tenant</string>
    <string name="tenant_name">Tenant Name</string>
    <string name="house_number">House Number</string>
    <string name="house_rent">House Rent</string>
    <string name="e_rent_users">E-RENT USERS</string>
    <string name="tenants_requests">Tenants Requests</string>
    <string name="info_center">Info Center</string>
    <string name="about">About</string>
    <string name="check_payments">Check Payments</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="o">o</string>
    <string name="in">in</string>
    <string name="ab">ab</string>
    <string name="e_rent_admin">E-RENT ADMIN</string>
</resources>