<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LandRegister">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/home"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/hello_e_rent"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/landlord"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_with_us"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/landlord_name"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_person_24"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_phone_android_24"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_email_24"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_security_24"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_my_location_24"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/house_type"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_house_24"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="5dp"
        android:layout_height="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_houses"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_baseline_format_list_numbered_24"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnTenantLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/button"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/btnTenantRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        android:textColor="#576AE8"
        android:layout_marginTop="5dp"
        />

</LinearLayout>