<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Choice">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/home"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_rent"
        android:layout_marginTop="10dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <Button
        android:id="@+id/btnTenant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/button"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:text="@string/tenant_registration"
        />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnLand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/button"
        android:textColor="@color/black"
        android:text="@string/landlord_registration"
        />



</LinearLayout>